<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_tweet_details">Tweet Details</string>
    <string name="user_screen_name">\@tayousyl</string>
    <string name="tweet_text">Please Wait!</string>
    <string name="created_at_long">7:51 AM - 26 OCT 2015</string>
    <string name="reweet_count">23</string>
    <string name="favorites_count">6</string>
    <string name="user_name">Taïna Sylvestre</string>
    <string name="compose_tweet_hint">What\'s going on?</string>
    <string name="update_status">Tweet</string>
    <string name="characters_left">140</string>
    <string name="created_at_relative">10m</string>
    <string name="tweet_id">-1</string>
    <string name="profile_title">Profile</string>
    <string name="compose_tweet_title">Compose Tweet</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tweet_count_label">TWEETS</string>
    <string name="tweet_count">18</string>
    <string name="following_count">13</string>
    <string name="following_count_label">FOLLOWING</string>
    <string name="followers_count">42</string>
    <string name="followers_count_label">FOLLOWERS</string>
    <string name="favorites_count_label">FAVORITES</string>
    <string name="search_tweets_title">Search</string>
    <string name="title_activity_search">Search</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow us....</string>
    <string name="welcome">Welcome to Twitter</string>

</resources>