<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ImageSearchActivity">
    <item android:id="@+id/action_search_tweets"
        android:orderInCategory="1"
        android:title="@string/search_tweets_title"
        android:icon="@drawable/ic_search_white_48dp"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
    <item android:id="@+id/action_compose_tweet"
        android:orderInCategory="2"
        android:title="@string/compose_tweet_title"
        android:icon="@drawable/add_tweet1"
        app:showAsAction="always"/>
    <item android:id="@+id/action_profile"
        android:orderInCategory="3"
        android:title="@string/profile_title"
        android:icon="@drawable/ic_account_circle_white_48dp"
        app:showAsAction="always"/>
</menu>