<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/characters_left"
        android:id="@+id/tvCharsLeft"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:scaleType="fitCenter"
        app:riv_corner_radius="5dip"
        app:riv_mutate_background="true"
        app:riv_tile_mode="repeat"
        app:riv_oval="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/tvUserName"
        android:textColor="#DD000000"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivUserPhoto"
        android:layout_toLeftOf="@+id/tvCharsLeft"
        android:layout_toStartOf="@+id/tvCharsLeft" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_screen_name"
        android:id="@+id/tvUserScreenName"
        android:layout_below="@+id/tvUserName"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_alignStart="@+id/tvUserName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etTweetText"
        android:hint="@string/compose_tweet_hint"
        android:layout_below="@+id/ivUserPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="top" />

    <Button
        style="@style/Widget.Button.Custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_status"
        android:id="@+id/btnTweet"
        android:layout_below="@+id/etTweetText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>