<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="32dp"
    android:paddingBottom="32dp">

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:scaleType="fitCenter"
        app:riv_corner_radius="5dip"
        app:riv_mutate_background="true"
        app:riv_tile_mode="clamp"
        app:riv_oval="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/tvUserName"
        android:textColor="#DD000000"
        android:textSize="16sp"
        android:layout_alignTop="@+id/ivUserPhoto"
        android:layout_toRightOf="@+id/ivUserPhoto"
        android:layout_toEndOf="@+id/ivUserPhoto"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_screen_name"
        android:id="@+id/tvUserScreenName"
        android:layout_above="@+id/tvTweetText"
        android:layout_toRightOf="@+id/tvUserName"
        android:layout_toEndOf="@+id/tvUserName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at_relative"
        android:id="@+id/tvCreatedAt"
        android:gravity="right"
        android:layout_alignTop="@+id/tvUserScreenName"
        android:layout_toRightOf="@+id/tvUserScreenName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.codepath.apps.twitter.views.LinkifiedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_text"
        android:autoLink="all"
        android:id="@+id/tvTweetText"
        android:layout_below="@+id/tvUserName"
        android:layout_toRightOf="@+id/ivUserPhoto"
        android:layout_alignRight="@+id/tvCreatedAt"
        android:layout_alignEnd="@+id/tvCreatedAt" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivPhoto"
        android:scaleType="fitCenter"
        app:riv_corner_radius="5dip"
        app:riv_mutate_background="true"
        app:riv_tile_mode="repeat"
        app:riv_oval="false"
        android:visibility="invisible"
        android:layout_below="@+id/tvTweetText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_id"
        android:id="@+id/tvTweetId"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/reply_action"
        android:id="@+id/ivReply"
        android:layout_alignTop="@+id/ivRetweets"
        android:layout_alignRight="@+id/ivUserPhoto"
        android:layout_alignEnd="@+id/ivUserPhoto" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/retweet_action_default"
        android:id="@+id/ivRetweets"
        android:layout_below="@+id/ivPhoto"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/like_action_default"
        android:id="@+id/ivlike"
        android:layout_below="@+id/ivPhoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>