<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ActivityLogin"
    android:background="@color/white">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@drawable/ic_twitterlogo"
        android:layout_centerHorizontal="true"
       />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#0084B4"
        android:paddingTop="30dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:paddingLeft="30dp"
            android:id="@+id/textView1"
            android:layout_below="@+id/textView"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:padding="12dp"
        android:textSize="20dp"
        android:onClick="loginToRest"
        android:text="@string/login_label"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:id="@+id/button" />
</RelativeLayout>

</RelativeLayout>