<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="300dp"
    android:background="@drawable/layout_bg">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/ivUserBackgroundImage"
        android:layout_margin="3dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"/>

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:scaleType="fitCenter"
        app:riv_corner_radius="5dip"
        app:riv_mutate_background="true"
        app:riv_tile_mode="clamp"
        app:riv_oval="true"
        app:riv_border_color="#ffffff"
        app:riv_border_width="2dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"/>

    <Button
        style="@style/Widget.Button.NotFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Follow"
        android:id="@+id/btnFollow"
        android:layout_below="@+id/ivUserBackgroundImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/tvUserName"
        android:textColor="#000000"
        android:textSize="18dp"
        android:layout_below="@+id/btnFollow"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_screen_name"
        android:id="@+id/tvUserScreenName"
        android:layout_below="@+id/tvUserName"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:text="@string/tweet_text"
        android:id="@+id/tvUserDescription"
        android:layout_below="@+id/tvUserScreenName"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp" />

</RelativeLayout>